# wrapper-lite

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
tests/: complex.rs  simple.rs  trait_custom_ty.rs
