[package]
name = "wrapper-lite"
version = "0.1.1"
edition = "2021"
rust-version = "1.56.0"

# === Publication info ===
authors = ["Hantong Chen <cxwdyx620@gmail.com>"]
categories = ["development-tools"]
description = "Helper macro for creating a wrapper over any type (new-type idiom)."
keywords = ["macro", "wrapper"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hanyu-dev/wrapper-lite"

[dependencies]

[features]
